--- a/index.html
+++ b/index.html
@@ -105,20 +105,19 @@ Connect you with Charter Schools and other Socially Responsible avenues, where y
       <h3>To advance racial equity and inclusion within organizational and institutional structures .</h3>
       <p><a href="#work" class="w3-button w3-black">Our Customers<i class="fa fa-th"> </i> </a></p>
       <h2>Why you should hire BLAC</h2> 
-       <h2>The jobs that BLAC will help you accomplish
+       <h2>Talent Sourcing
       </h2>
-      <h3>
-        <ul>
-          <li>To identify Issues of retaining black people with leadership potential</li>
-           <li> To identify issues with fostering and promoting black people with leadership potential or in a highly technical areas where there’s a skills shortage (STEM)</li>
-           <li>Recruiting black people for positions of leadership that reflect the general population</li>
-            <li>Training to evaluate leadership potential early to cultivate future leaders of color</li>
-            <li>Training to change company culture to expect higher diversity at senior positions</li>
-            <li>Feeding the pipeline of STEM minorities in your communities</li>
-
-        </ul>
-        
-      </h3>
+      <p><b>There is a war for talent, especially STEM and diversity candidates</b>
+STEM occupations are forecast to grow at a rate over 76% higher than non-STEM job growth nationwide.
+Currently the demographics are 70 percent white and 65 percent male.
+</p>
+      <h2>Profitability</h2>
+      <p><b>Missed opportunities</b> to create a diverse work space cost the U.S an estimated <b>$1.05 trillion </b>per year. Diverse leadership increases profitability.
+Research shows that a technical lead resource replacement can cost a company up to <b>250%</b> of an annual salary.</p>
+      <h2>Culture</h2>
+      <p>Building an inclusive culture attracts, empowers and retains diverse talent. 
+<b>82%</b> of companies say D&I helps them to attract and retain talent, and <b>62%</b> say it drives employee engagement.</p>
+      
     </div>
     <div class="w3-col m6">
       <img class="w3-image w3-round-large" src="image3.jpg" alt="Buildings" width="700" height="394">
@@ -139,7 +138,7 @@ Connect you with Charter Schools and other Socially Responsible avenues, where y
           <!--
           <p class="w3-opacity">.............</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          --><p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          --><p><button class="w3-button w3-light-grey w3-block"><a href="https://www.linkedin.com/in/dr-aaron-l-washington-ii-pmp-a338068/"><i class="fa fa-envelope"></i> Contact</button></p>
         </div>
       </div>
     </div>
@@ -161,7 +160,7 @@ Connect you with Charter Schools and other Socially Responsible avenues, where y
           <h3>Lisa Robinson</h3>
           <!--<p class="w3-opacity">...........</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          --><p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          --><p><button class="w3-button w3-light-grey w3-block"><a href="https://www.linkedin.com/in/lisa-robinson-b2081293/"><i class="fa fa-envelope"></i> Contact</button></p>
         </div>
       </div>
     </div>
@@ -172,7 +171,7 @@ Connect you with Charter Schools and other Socially Responsible avenues, where y
           <h3>Taiwo Togun, Ph.D.</h3>
           <!--<p class="w3-opacity">Data Scientist/Educator</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          --><p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          --><p><button class="w3-button w3-light-grey w3-block"><a href="https://www.linkedin.com/in/tatogun/"><i class="fa fa-envelope"></i> Contact</button></p>
         </div>
       </div>
     </div>
