--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ Research shows that a technical lead resource replacement can cost a company up 
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   
-  <p>Built by <a href="https://seqhubanalytics.com" title="SeqHub" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Built by <a href="https://seqhubanalytics.com" title="SeqHub" target="_blank" class="w3-hover-text-green">SeqHub</a></p>
 </footer>
  
 <script>
