--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Research shows that a technical lead resource replacement can cost a company up 
       <div class="w3-card">
         <img src="image8.png" alt="Peterson" style="width:100%">
         <div class="w3-container">
-          <h3>Durodjio Peterson</h3>
+          <h3>Durodgio Peterson</h3>
           <!--<p class="w3-opacity">............</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
           --><p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
