--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body, html {
 <!-- About Section -->
 <div class="w3-container" style="padding:128px 16px" id="about">
   <h3 class="w3-center">ABOUT US</h3>
-  <p class="w3-center w3-large">What we DO</p>
+  <p class="w3-center w3-large">What we do</p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-third">
       <img src="image2.jpg" alt="Dan" style="width:100%">
@@ -89,7 +89,7 @@ Programs to foster and promote black people with leadership potential or in a hi
     <div class="w3-third">
       <img src="image7.jpg" alt="Dan" style="width:100%">
       <p class="w3-large">Talent Sourcing</p>
-      <p>Connect you to alternative talent sources that we can endorse you to  as a committed D&I culture
+      <p>Connect you to alternative talent sources that we can endorse you to  as a committed D&I culture. 
 Connect you with Charter Schools and other Socially Responsible avenues, where you can support/sponsor Minority STEM enrichment in your community
 .</p>
     </div>
@@ -101,8 +101,8 @@ Connect you with Charter Schools and other Socially Responsible avenues, where y
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h2>Mission Focus.</h2>
-      <h3>To advance racial equity and inclusion within organizational and institutional structures .</h3>
+      <h2>Mission Focus</h2>
+      <h3>To advance racial equity and inclusion within organizational and institutional structures.</h3>
       <p><a href="#work" class="w3-button w3-black">Our Customers<i class="fa fa-th"> </i> </a></p>
       <h2>Why you should hire BLAC</h2> 
        <h2>Talent Sourcing
@@ -149,7 +149,7 @@ Research shows that a technical lead resource replacement can cost a company up 
           <h3>Durodgio Peterson</h3>
           <!--<p class="w3-opacity">............</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          --><p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          --><p><button class="w3-button w3-light-grey w3-block"><a https://www.linkedin.com/in/durodgio/"><i class="fa fa-envelope"></i> Contact</button></p>
         </div>
       </div>
     </div>
