--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Research shows that a technical lead resource replacement can cost a company up 
           <h3>Durodgio Peterson</h3>
           <!--<p class="w3-opacity">............</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          --><p><button class="w3-button w3-light-grey w3-block"><a https://www.linkedin.com/in/durodgio/"><i class="fa fa-envelope"></i> Contact</button></p>
+          --><p><button class="w3-button w3-light-grey w3-block"><a href="https://www.linkedin.com/in/durodgio/"><i class="fa fa-envelope"></i> Contact</button></p>
         </div>
       </div>
     </div>
