Added email details

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Research shows that a technical lead resource replacement can cost a company up 
   <div style="margin-top:20px">
     <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Chicago, US</p>
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
-    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
+    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: blacatbrown@gmail.com</p>
     <br>
  
 
