--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ Research shows that a technical lead resource replacement can cost a company up 
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Built by <a href="https://www.seqhubanalytics.com"  target="_blank" class="w3-hover-text-green">SeqHub Analytics LLC</a></p>
 </footer>
  
 <script>
@@ -256,7 +256,7 @@ function onClick(element) {
 }
 
 
-// Toggle between showing and hiding the sidebar when clicking the menu icon
+// Toggle between showing and hiding the sidebar 
 var mySidebar = document.getElementById("mySidebar");
 
 function w3_open() {
