--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Research shows that a technical lead resource replacement can cost a company up 
     
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card" style="cursor:pointer;" onclick="window.location='https://www.linkedin.com/in/dr-aaron-l-washington-ii-pmp-a338068/';" >
-        <img src="Aaron.JPG" alt="Washington" style="width:100%">
+        <img src="Aaron.JPG" alt="Washington" style="width:100%" height="295">
         <div class="w3-container">
           <h3>Aaron L. Washington, II Ph.D.</h3>
          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
@@ -140,9 +140,9 @@ Research shows that a technical lead resource replacement can cost a company up 
       </div>
     </div>
     
-    <div class="w3-col l3 m6 w3-margin-bottom">
+    <div class="w3-col l3 m6 w3-margin-bottom" style="cursor:pointer;" onclick="window.location='https://www.linkedin.com/in/durodgio/';">
       <div class="w3-card">
-        <img src="image8.png" alt="Peterson" style="width:100%">
+        <img src="image8.png" alt="Peterson" style="width:100%" >
         <div class="w3-container">
           <h3>Durodjio Peterson</h3>
           <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
@@ -234,7 +234,7 @@ Research shows that a technical lead resource replacement can cost a company up 
   <div style="margin-top:20px">
     <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Chicago, US</p>
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
-    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: blacatbrown@gmail.com</p>
+    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
     <br>
  
 
@@ -243,6 +243,7 @@ Research shows that a technical lead resource replacement can cost a company up 
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
  
 <script>
@@ -255,7 +256,7 @@ function onClick(element) {
 }
 
 
-// Toggle between showing and hiding the sidebar 
+// Toggle between showing and hiding the sidebar when clicking the menu icon
 var mySidebar = document.getElementById("mySidebar");
 
 function w3_open() {
