--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Research shows that a technical lead resource replacement can cost a company up 
 
 
 <!-- Our Customers-->
-<div class="w3-container" style="padding:128px 16px" id="work">
+<div class="w3-container" style="padding:128px 16px" id="customers">
   <h3 class="w3-center">OUR CUSTOMERS</h3>
   <p class="w3-center w3-large">These are the industries we service</p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
