--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@ body, html {
 <!-- About Section -->
 <div class="w3-container" style="padding:128px 16px" id="about">
   <h3 class="w3-center">ABOUT US</h3>
-  <p class="w3-center w3-large">What we DO</p>
+  <p class="w3-center w3-large">What we do</p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-third">
       <img src="image2.jpg" alt="Dan" style="width:100%">
       <p class="w3-large">Consultations and Diagnostics</p>
-      <p>Diagnose the overall D&I culture
-Exit interviews / analysis of exit surveys to address the attrition of minorities, especially senior technical leaders
+      <p>Diagnose the overall D&I culture; 
+exit interviews / analysis of exit surveys to address the attrition of minorities, especially senior technical leaders
 .</p>
     </div>
     <div class="w3-third">
       <img src="image8.jpg" alt="Dan" style="width:100%">
       <p class="w3-large">Leadership coaching, mentoring and development.</p>
-      <p>Assist and coach leadership to have the “hard conversations” around race and gender
+      <p>Assist and coach leadership to have the “hard conversations” around race and gender. 
 Programs to foster and promote black people with leadership potential or in a highly technical areas where there’s a skills shortage (STEM)
 </p>
     </div>
@@ -89,7 +89,7 @@ Programs to foster and promote black people with leadership potential or in a hi
       <img src="image7.jpg" alt="Dan" style="width:100%">
       <p class="w3-large">Talent Sourcing</p>
       <p>Connect you to alternative talent sources that we can endorse you to  as a committed D&I culture
-Connect you with Charter Schools and other Socially Responsible avenues, where you can support/sponsor Minority STEM enrichment in your community
+Connect you with Charter Schools and other socially responsible avenues, where you can support/sponsor Minority STEM enrichment in your community
 .</p>
     </div>
 
@@ -106,7 +106,7 @@ Connect you with Charter Schools and other Socially Responsible avenues, where y
       <h2>Why you should hire BLAC</h2> 
        <h2>Talent Sourcing
       </h2>
-      <p><b>There is a war for talent, especially STEM and diversity candidates</b>
+      <p><b>There is a war for talent, especially STEM and diversity candidates.</b>
 STEM occupations are forecast to grow at a rate over 76% higher than non-STEM job growth nationwide.
 Currently the demographics are 70 percent white and 65 percent male.
 </p>
@@ -144,7 +144,7 @@ Research shows that a technical lead resource replacement can cost a company up 
       <div class="w3-card">
         <img src="image8.png" alt="Peterson" style="width:100%" >
         <div class="w3-container">
-          <h3>Durodjio Peterson</h3>
+          <h3>Durodgio Peterson</h3>
           <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
         </div>
       </div>
@@ -233,7 +233,7 @@ Research shows that a technical lead resource replacement can cost a company up 
   <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
   <div style="margin-top:20px">
     <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i>  US</p>
-    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 101010101</p>
+    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +12482250721</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: blacatbrown@gmail.com</p>
     <br>
  
