--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Research shows that a technical lead resource replacement can cost a company up 
 <!-- Team Section -->
 <div class="w3-container" style="padding:128px 16px" id="team">
   <h3 class="w3-center">OUR TEAM</h3>
-  <p class="w3-center w3-large">These are people that do the organisation</p>
+  <p class="w3-center w3-large"> </p>
   <div class="w3-row-padding " style="margin-top:64px">
     
     <div class="w3-col l3 m6 w3-margin-bottom">
