--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Research shows that a technical lead resource replacement can cost a company up 
     
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card" style="cursor:pointer;" onclick="window.location='https://www.linkedin.com/in/dr-aaron-l-washington-ii-pmp-a338068/';" >
-        <img src="Aaron_200x200.JPG" alt="Washington" style="width:100%" >
+        <img src="Aaron_200x200.jpg" alt="Washington" style="width:100%" >
         <div class="w3-container">
           <h3>Aaron L. Washington, II </h3>
          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
